# ndk

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bionic.txt  ch06.txt  ch07.txt  functions.txt  global_reference.txt  graphic_api.txt  graphic_window_api.txt  io.txt  jni-basic.txt  jni_graphics.txt  log.txt  memory.txt  process.txt  socket_local.txt  socket_tcp.txt  socket_udp.txt  start.txt  support_cplus.txt  swig.txt  thread.txt  wav.txt
app/src/main/cpp/: com_year2018_ndk_jniNative_General.h  com_year2018_ndk_jniNative_Imooc.h  demo_log.cpp  demo_log.h  dynamic.cpp  full_log.h  general.cpp  imooc.cpp  simple_log.h
app/src/main/cpp/basic/: refer.cpp  refer.h
app/src/main/cpp/ch06/: ch06.cpp  io.cpp  memory_c.c  memory_c_plus.cpp  process.cpp
app/src/main/cpp/ch07/: ch07.cpp
app/src/main/cpp/ch08/: com_year2018_ndk_activity_ch08_EchoClientActivity.h  com_year2018_ndk_activity_ch08_EchoClientActivity_ClientTask.h  com_year2018_ndk_activity_ch08_EchoLocalActivity.h  com_year2018_ndk_activity_ch08_EchoLocalActivity_ClientTask.h  com_year2018_ndk_activity_ch08_EchoLocalActivity_ServerTask.h  com_year2018_ndk_activity_ch08_EchoServerActivity.h  com_year2018_ndk_activity_ch08_EchoServerActivity_ServerTask.h  echo.cpp
app/src/main/cpp/graphic/: AbstractPlayerActivity.cpp  BitmapPlayerActivity.cpp  Common.cpp  Common.h  NativeWindowPlayerActivity.cpp  OpenGLPlayerActivity.cpp  com_year2018_ndk_activity_graphic_AbstractPlayerActivity.h  com_year2018_ndk_activity_graphic_BitmapPlayerActivity.h  com_year2018_ndk_activity_graphic_NativeWindowPlayerActivity.h  com_year2018_ndk_activity_graphic_OpenGLPlayerActivity.h
app/src/main/cpp/socket/: com_year2018_ndk_activity_socket_EchoClientActivity.h  com_year2018_ndk_activity_socket_EchoClientActivity_ClientTask.h  com_year2018_ndk_activity_socket_EchoLocalActivity.h  com_year2018_ndk_activity_socket_EchoLocalActivity_ClientTask.h  com_year2018_ndk_activity_socket_EchoLocalActivity_ServerTask.h  com_year2018_ndk_activity_socket_EchoServerActivity.h  com_year2018_ndk_activity_socket_EchoServerActivity_ServerTask.h  echo.cpp
app/src/main/cpp/swig/: unix.cpp  unix.i
app/src/main/cpp/swig/c2j/: async_uid_provider.h  c2j.cpp  c2j.h  c2j.i
app/src/main/cpp/swig/plus/: A.h  plus.cpp  plus.h  plus.i
app/src/main/cpp/swig/web/: class_factory.h  ishape_provider.h  shape.cpp  shape.h  shape.i  shape_provider.h
app/src/main/cpp/transcode/: platform.h
app/src/main/cpp/wav/: WavActivity.cpp  com_year2018_ndk_activity_wav_WavActivity.h  com_year2018_ndk_activity_wav_WavActivity_PlayTask.h
app/src/main/java/com/year2018/ndk/: Constant.java  MyApp.java
app/src/main/java/com/year2018/ndk/activity/: ImoocActivity.java  MainActivity.java  ThreadActivity.java
app/src/main/java/com/year2018/ndk/activity/ch08/: AbstractEchoActivity.java  EchoClientActivity.java  EchoLocalActivity.java  EchoServerActivity.java
app/src/main/java/com/year2018/ndk/activity/graphic/: AbstractPlayerActivity.java  AviActivity.java  BitmapPlayerActivity.java  NativeWindowPlayerActivity.java  OpenGLPlayerActivity.java  TranscodeActivity.java
app/src/main/java/com/year2018/ndk/activity/socket/: AbstractEchoActivity.java  EchoClientActivity.java  EchoLocalActivity.java  EchoServerActivity.java
app/src/main/java/com/year2018/ndk/activity/wav/: WavActivity.java
app/src/main/java/com/year2018/ndk/jniNative/: Dynamic.java  General.java  Imooc.java
app/src/main/java/com/year2018/ndk/jniNative/swig/: unix.java  unixJNI.java
app/src/main/java/com/year2018/ndk/jniNative/swig/c2j/: AsyncUidProvider.java  C2J.java  C2JJNI.java  UidHandler.java
app/src/main/java/com/year2018/ndk/jniNative/swig/plus/: A.java  JEnum.java  Plus.java  PlusConstants.java  PlusJNI.java  Point.java  Safe.java  Unsafe.java
app/src/main/java/com/year2018/ndk/jniNative/swig/web/: ClassFactory.java  IShapeProvider.java  SWIGTYPE_p_int.java  SWIGTYPE_p_std__string.java  Shape.java  ShapeJNI.java
app/src/main/java/com/year2018/ndk/util/: FileManager.java  TLogger.java  ToastManager.java
app/src/main/res/drawable/: btn_press.xml
app/src/main/res/layout/: activity_avi.xml  activity_bitmap_player.xml  activity_echo_client.xml  activity_echo_local.xml  activity_echo_server.xml  activity_imooc.xml  activity_main.xml  activity_open_gl_player.xml  activity_thread.xml  activity_transcode.xml  activity_wav.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
